feat: adição de autenticação
